--- a/.github/workflows/deployAction.yml
+++ b/.github/workflows/deployAction.yml
@@ -3,6 +3,25 @@ name: deployment-on-wabli-server
   repository_dispatch:
     types:
       - deploy
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: false
+        default: 'warning'
+        type: choice
+        options:
+        - info
+        - warning
+        - debug
+      tags:
+        description: 'Test scenario tags'
+        required: false
+        type: boolean
+      environment:
+        description: 'Environment to run tests against'
+        type: environment
+        required: false
 jobs:
   Deploy-the-code:
     runs-on: ubuntu-latest
